[WinCairo] Wrongly placed scroll bars in HiDPI https://bugs.webkit.org/show_bug.cgi?id=180066

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-12-01
Reviewed by Žan Doberšek.

PlatformContextCairo wasn't properly initialized. It should have a
pointer to GraphicsContextPrivate in WinCairo port to paint
controls in right places.

No new tests, no behavior change.

* platform/graphics/win/GraphicsContextCairoWin.cpp:
(WebCore::GraphicsContext::platformInit): Call PlatformContextCairo::setGraphicsContextPrivate.

Canonical link: https://commits.webkit.org/196246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225397 268f45cc-cd09-0410-ab3c-d52691b4dbfc